@@ -34,8 +34,16 @@ sub report {
 	my $self = shift;
 	my $report = $self->SUPER::report;
 	my @report_full = split m/\n/ms, $report;
-	my @report = ($report_full[0], $report_full[-2], $report_full[-1]);
-	return wantarray ? @report : (join "\n", @report)."\n";
+	my @report = ();
+	if (@report_full > 2) {
+		@report = ($report_full[0], $report_full[-2], $report_full[-1]);
+	};
+	my $report_scalar = (join "\n", @report);
+	if ($report_scalar ne $EMPTY_STR) {
+		$report_scalar .= "\n";
+	}
+	return wantarray ? @report : $report_scalar;
+}
 
 # Get state.
 sub state {
