@@ -6,6 +6,7 @@
  - Implement record() method, which can has undefined message.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SEE ALSO section in doc.
+ - Improve report() method return values.
  - Update Module::Install to 1.16 version.
  - Update copyright years in LICENSE file.
 
